@@ -1,35 +1,29 @@
-/****************************************************************************
- *
- * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/stricmp.c,v $
- * $Date: 2002/09/24 21:02:36 $
- * $Revision: 1.3 $
- * $State: Exp $
- * $Author: admin $
- *
- ***************************************************************************/
-
-#ifdef EMBED_RCSID
-static const char rcs_id[] = "$Id: stricmp.c,v 1.3 2002/09/24 21:02:36 admin Exp $";
-#endif
+/* Case insensitive string comparison.
+   Copyright (c) 2002, 2003, 2004, 2005 UnixLib Developers.  */
 
 #include <string.h>
 #include <strings.h>
 #include <ctype.h>
 
 int
-stricmp (register const char *s1, register const char *s2)
+stricmp (const char *s1, const char *s2)
 {
-  register int i, j;
+  const unsigned char *p1 = (const unsigned char *) s1;
+  const unsigned char *p2 = (const unsigned char *) s2;
+  int result = 0;
 
-  do
+  if (p1 == p2)
+    return result;
+
+  while (! result)
     {
-      i = *s1++, j = *s2++;
-      i = toupper (i);
-      j = toupper (j);
+      result = tolower (*p1) - tolower (*p2);
+      if (*p1++ == '\0')
+	break;
+      p2 ++;
     }
-  while (i && i == j);
 
-  return (i - j);
+  return result;
 }
 
 int
